// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.5ea58b5a4311bcf28d3b.js",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.b8b33f53ef8b50b15de2.js",
    4187,
    {
      "compressed": true,
      "immutable": true,
      "size": 4187,
    },
  ],
  [
    "main.b8b33f53ef8b50b15de2.js.map",
    13492,
    {
      "development": true,
      "size": 13492,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": errors 1`] = `[]`;

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": warnings 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and delete original assets when function used: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and delete original assets when function used: errors 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and delete original assets when function used: warnings 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and delete original assets: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and delete original assets: errors 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and delete original assets: warnings 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: errors 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: warnings 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: errors 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: warnings 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and keep original assets: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and keep original assets: errors 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and keep original assets: warnings 1`] = `[]`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: errors 1`] = `
[
  "Error: Conflict: Multiple assets emit different content to the same filename 23fc1d3ac606d117e05a140e0de79806.svg",
  "Error: Conflict: Multiple assets emit different content to the same filename async.async.55e6e9a872bcc7d4b226.js",
  "Error: Conflict: Multiple assets emit different content to the same filename main.46d06887b61d39060e44.js",
]
`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: warnings 1`] = `[]`;
